--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-svg": "^16.1.34",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.2"
   },
