--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-resize-detector": "^10.0.1",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-svg": "^16.1.34",
