--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine": "^5.15.14",
     "axios": "^1.5.0",
+    "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -24,7 +25,8 @@
     "react-router-dom": "^6.16.0",
     "react-svg": "^16.1.34",
     "redux": "^4.2.1",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "translate": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
