--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.16.0",
     "react-svg": "^16.1.34",
     "redux": "^4.2.1",
+    "serpapi": "^2.1.0",
     "socket.io-client": "^4.7.2",
     "translate": "^3.0.0"
   },
