--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@emotion/styled-base": "^11.0.0",
     "@mui/material": "^5.15.15",
-    "@mui/styled-engine": "^5.15.14",
     "axios": "^1.5.0",
     "qs": "^6.12.1",
     "react": "^18.2.0",
@@ -26,8 +24,7 @@
     "react-svg": "^16.1.34",
     "redux": "^4.2.1",
     "serpapi": "^2.1.0",
-    "socket.io-client": "^4.7.2",
-    "translate": "^3.0.0"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
