--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.5.0",
     "qs": "^6.12.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-resize-detector": "^10.0.1",
