--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "axios": "^1.5.0",
+    "install": "^0.13.0",
+    "npm": "^10.8.0",
     "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-resizable-layout": "^0.7.2",
     "react-resize-detector": "^10.0.1",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
