--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "@mui/system": "^5.15.15",
     "axios": "^1.5.0",
     "install": "^0.13.0",
     "npm": "^10.8.0",
