--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@mui/system": "^5.15.15",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.5.0",
     "install": "^0.13.0",
-    "npm": "^10.8.0",
+    "npm": "^10.8.1",
     "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
