--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,7 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+    #proxy the api requests
     location /api {
         proxy_pass http://backend-service;
     }
